[gd_scene load_steps=10 format=3 uid="uid://c72bx1odfmy04"]

[ext_resource type="Script" uid="uid://bqs3kqyv8vfj5" path="res://objects/arcade_machine/arcade_machine.gd" id="1_0dx0s"]
[ext_resource type="PackedScene" uid="uid://krmmoio01xnt" path="res://assets/models/arcade_machine/arcade_machine.glb" id="1_vvhfv"]
[ext_resource type="Material" uid="uid://dtre1raij415n" path="res://assets/models/arcade_machine/arcade_machine_basic.material" id="3_eg3fq"]
[ext_resource type="Script" uid="uid://c4nd5ojjjut2s" path="res://scripts/nodes/component_interactable.gd" id="4_eg3fq"]
[ext_resource type="PackedScene" uid="uid://bbyl36tkg87i8" path="res://objects/arcade_machine/arcade_machine_display/arcade_machine_display.tscn" id="5_ns7ev"]
[ext_resource type="AudioStream" uid="uid://cox4r8feyqbew" path="res://assets/audio/sfx/TVStatic.wav" id="6_mq7fu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ns7ev"]
size = Vector3(0.9, 1, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_eg3fq"]
viewport_path = NodePath("GameViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_eg3fq"]
size = Vector3(0.047, 0.613, 0.769)

[node name="ArcadeMachine" type="StaticBody3D" groups=["ArcadeMachine"]]
script = ExtResource("1_0dx0s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.089, 0.5, 0)
shape = SubResource("BoxShape3D_ns7ev")

[node name="arcade_machine" parent="." instance=ExtResource("1_vvhfv")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="ArcadeMachine" parent="arcade_machine" index="0"]
surface_material_override/0 = ExtResource("3_eg3fq")

[node name="GameScreen" type="Sprite3D" parent="."]
transform = Transform3D(0.963073, -0.269239, 0, 0.269239, 0.963073, 0, 0, 0, 1, -0.00685972, 1.67051, 0)
pixel_size = 0.0024
axis = 0
transparent = false
double_sided = false
texture_filter = 2
texture = SubResource("ViewportTexture_eg3fq")

[node name="ITriggerArea" type="Area3D" parent="GameScreen"]
transform = Transform3D(1, 0.00033161, 0, -0.00033161, 1, 0, 0, 0, 1, -0.000195652, -0.000362873, 0)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameScreen/ITriggerArea"]
shape = SubResource("BoxShape3D_eg3fq")

[node name="ComponentInteractable" type="Node" parent="GameScreen/ITriggerArea"]
script = ExtResource("4_eg3fq")
metadata/_custom_type_script = "uid://c4nd5ojjjut2s"

[node name="CameraTransform" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -0.26892, 0.963163, 0, 0.963163, 0.26892, -1, 1.17549e-08, -4.21012e-08, 0.475, 1.827, 0)

[node name="GameViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
disable_3d = true
handle_input_locally = false
size = Vector2i(320, 240)

[node name="Display" parent="GameViewport" instance=ExtResource("5_ns7ev")]
unique_name_in_owner = true
layer = 10

[node name="ASP_Music" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
attenuation_model = 1
max_distance = 3.0
bus = &"MachineMusic"

[node name="ASP_Ambient" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
attenuation_model = 1
max_distance = 3.0
bus = &"MachineSFX"

[node name="ASP_SFX_01" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
attenuation_model = 1
max_distance = 3.0
bus = &"MachineSFX"

[node name="ASP_SFX_02" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
attenuation_model = 1
max_distance = 3.0
bus = &"MachineSFX"

[node name="ASP_Static" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
stream = ExtResource("6_mq7fu")
attenuation_model = 1
volume_db = -80.0
max_distance = 10.0
bus = &"MachineSFX"

[connection signal="focused" from="GameScreen/ITriggerArea/ComponentInteractable" to="." method="_on_component_interactable_focused"]
[connection signal="interacted" from="GameScreen/ITriggerArea/ComponentInteractable" to="." method="_on_component_interactable_interacted"]
[connection signal="unfocused" from="GameScreen/ITriggerArea/ComponentInteractable" to="." method="_on_component_interactable_unfocused"]
[connection signal="static_changed" from="GameViewport/Display" to="." method="_on_display_static_changed"]

[editable path="arcade_machine"]
